test/files/neg/t6476-bad-esc.scala

class Test {
  def f = s"abc\"def"
}
